# wsclean

./: .gitignore  README.md  pyproject.toml
wsclean/: main.py
