[tool.poetry]
name = "wsclean"
version = "1.0.0"
description = "Cleans the contents of your clipboard by removing redundant whitespace and new lines."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.scripts]
wsclean = "wsclean.main:app"

[tool.poetry.dependencies]
python = "^3.6"
pyperclip = "^1.8.2"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
